--- a/config/gnc/estimator-config.yaml
+++ b/config/gnc/estimator-config.yaml
@@ -36,3 +36,13 @@ updates:
 
     # Sensor noise covariance
     R: [0.000001]
+
+  planefit:
+    # Unscented transform params
+    UT:
+      alpha: 0.1
+      beta: 2.0
+      kappa: 0.0
+
+    # Sensor noise covariance
+    R: [0.000001, 0.000001, 0.000001, 0.000001]
