UKF Global update

--- a/config/gnc/control-config.yaml
+++ b/config/gnc/control-config.yaml
@@ -31,4 +31,4 @@ tol: 0.01 # convergence tolerance (norm of [x, y, z, yaw])
 min-fnorm: 0.001 # minimum allowed body-force norm (L2) on the vehicle: || [Fx, Fy, Fz] ||
 uart-path: "/dev/ttyACM1"
 min-thrust: 0
-sim-state: true #true- state comes from sim, false- state comes from kalman filter
+sim-state: false #true- state comes from sim, false- state comes from kalman filter
