--- a/config/gnc/estimator-config.yaml
+++ b/config/gnc/estimator-config.yaml
@@ -18,12 +18,12 @@ state:
 prediction:
   # Unscented transform params
   UT:
-    alpha: 0.1
+    alpha: 0.05
     beta: 2.0
     kappa: 2
 
   # Process noise covariance
-  Q_i: [0.00001, 0.00001, 0.00001, 0.00001, 0.00001, 0.00001]
+  Q_i: [0.00001, 0.00001, 0.00001, 0.001, 0.001, 0.001]
 
 updates:
 
@@ -35,7 +35,7 @@ updates:
       kappa: 0.0
 
     # Sensor noise covariance
-    R: [0.0001]
+    R: [0.00001]
 
   planefit:
 
@@ -58,7 +58,12 @@ updates:
       kappa: 0.0
 
     # Sensor noise covariance
-    R: [0.000001, 0.000001, 0.000001, 0.0000001, 0.0000001, 0.0000001]
+    R: [0.0001, 0.0001, 0.0001, 0.0001, 0.0001, 0.01]
 
 sim_planefit_update: true
-sim_global_update: true
+sim_global_update: false
+
+en_lidar: true
+en_planefit: false
+en_global: true
+
