--- a/config/camera-config.yaml
+++ b/config/camera-config.yaml
@@ -1,10 +1,16 @@
 # Camera parameters
 
+# D435 Serial Numbers
+# Light Blue: 819112070800
+# Green: 817512071338
+# Purple: 819112072448
+# Orange: 819112070694
+
 forward:
   width: 640
   height: 480
   fps: 30                # 15, 30, or 60
-  serial: "805212060548" # 12 digit number on bottom of realsense camera
+  serial: "819112070800" # 12 digit number on bottom of realsense camera
 
 downward:
   width: 640
