--- a/config/gnc/slam-config-forward.yaml
+++ b/config/gnc/slam-config-forward.yaml
@@ -71,4 +71,8 @@ Viewer.ViewpointY: -0.7
 Viewer.ViewpointZ: -1.8
 Viewer.ViewpointF: 500
 
-use_viewer: true
+#--------------------------------------------------------------------------------------------
+# Visualizer Parameters
+#--------------------------------------------------------------------------------------------
+
+zcm_url: "ipc"
