--- a/tools/plotter/CMakeLists.txt
+++ b/tools/plotter/CMakeLists.txt
@@ -2,17 +2,48 @@ if(NOT BUILD_PLOTTER)
     return()
 endif()
 
-find_package(Pangolin REQUIRED)
+# Find includes in corresponding build directories
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+# Instruct CMake to run moc automatically when needed
+set(CMAKE_AUTOMOC ON)
+# Create code from a list of Qt designer ui files
+set(CMAKE_AUTOUIC ON)
 
-add_executable(maav-plotter plotter.cpp)
+# Find the QtWidgets library
+find_package(Qt5 COMPONENTS Widgets PrintSupport REQUIRED)
+find_package(OpenGL REQUIRED)
 
-target_include_directories(maav-plotter PUBLIC
-    ${Pangolin_INCLUDE_DIRS}
+#enable OpenGl
+add_definitions(-DQCUSTOMPLOT_USE_OPENGL)
+
+set(EXECUTABLE maav-plotter)
+
+set(PLOTTER_SRC
+    qcustomplot.cpp
+    mainwindow.ui
+    mainwindow.cpp
+    plotter.cpp
 )
 
-target_link_libraries(maav-plotter
+# Tell CMake to create the plotter executable
+add_executable(${EXECUTABLE} ${PLOTTER_SRC})
+
+target_include_directories(${EXECUTABLE} PUBLIC
+    qtplotter
+    Qt5::Widgets
+    Qt5::PrintSupport
+    ${ZCM_INCLUDE_DIRS}
+    ${SW_INCLUDE_DIR}
+    ${OPENGL_INCLUDE_DIRS}
+)
+
+# Use the Widgets module from Qt 5
+target_link_libraries(${EXECUTABLE}
+    Qt5::Widgets
+    Qt5::PrintSupport
+    maav-utils
     maav-msg
     ${ZCM_LIBRARIES}
     ${YAMLCPP_LIBRARY}
-    ${Pangolin_LIBRARIES}
+    ${OPENGL_LIBRARIES}
 )
