Added a toggle to publish images over the network

--- a/config/gnc/slam-config-forward.yaml
+++ b/config/gnc/slam-config-forward.yaml
@@ -75,4 +75,5 @@ Viewer.ViewpointF: 500
 # Visualizer Parameters
 #--------------------------------------------------------------------------------------------
 
-zcm_url: "ipc"
+zcm_url: "udpm://239.255.76.67:7667?ttl=1"
+send_images: false
