--- a/config/tools/visualizer-config.yaml
+++ b/config/tools/visualizer-config.yaml
@@ -1,3 +1,5 @@
+zcm_url: "udpm://239.255.76.67:7667?ttl=1"
+
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
 #--------------------------------------------------------------------------------------------
@@ -17,3 +19,4 @@ Viewer.ViewpointF: 500
 #--------------------------------------------------------------------------------------------
 scale: 5000
 fps: 60
+display_images: false
