Added logger to plotter

--- a/config/tools/plotter-config.yaml
+++ b/config/tools/plotter-config.yaml
@@ -1,5 +1,5 @@
-zcm-url: "udpm://239.255.76.67:7667?ttl=1"
-# zcm-url: "ipc"
+# zcm-url: "udpm://239.255.76.67:7667?ttl=1"
+zcm-url: "ipc"
 
 color:
   lidar: [128, 0, 0]
