--- a/config/gnc/slam-config-forward.yaml
+++ b/config/gnc/slam-config-forward.yaml
@@ -75,5 +75,6 @@ Viewer.ViewpointF: 500
 # Visualizer Parameters
 #--------------------------------------------------------------------------------------------
 
-zcm_url: "udpm://239.255.76.67:7667?ttl=1"
-send_images: false
+zcm_url: "ipc"
+# zcm_url: "udpm://239.255.76.67:7667?ttl=1"
+send_images: true
