--- a/config/gnc/control-config.yaml
+++ b/config/gnc/control-config.yaml
@@ -32,3 +32,5 @@ uart-path: "/dev/ttyACM1"
 sim: true        #true - control sim over udp, false - control pixhawk through usb
 sim-state: true  #true - state comes from sim, false - state comes from kalman filter
 takeoff-alt: 0.5 #meters
+zcm-url: "ipc"
+# zcm-url: "udpm://239.255.76.67:7667?ttl=1"
