--- a/config/gnc/slam-config-forward.yaml
+++ b/config/gnc/slam-config-forward.yaml
@@ -79,4 +79,4 @@ Viewer.ViewpointF: 500
 zcm_url: "udpm://239.255.76.67:7667?ttl=1"
 send_images: false
 send_points: false
-send_keyframes: false
+send_keyframes: true
